feat: file upload

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules
 
 # Adonis directory for storing tmp files
-tmp
+tmp/uploads
 
 # Environment variables, never commit this file
 .env
@@ -10,3 +10,7 @@ tmp
 
 # The development sqlite file
 database/*.sqlite
+
+yarn.lock
+
+public/docs
