--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.10",
     "@adonisjs/vow": "^1.0.17",
+    "@rocketseat/adonis-bull": "^0.2.1",
+    "adonis-swagger": "git@github.com:ahmadarif/adonis-swagger.git#v1.3.0",
+    "date-fns": "^2.9.0",
     "http-status-codes": "^1.4.0",
     "pg": "^7.18.1",
     "slugify": "^1.3.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "commitizen": "^4.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
@@ -40,9 +47,17 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1"
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.2"
   },
   "autoload": {
     "App": "./app"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
   }
 }
