feat(auth): create auth controller and test

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NODE_ENV=development
 
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
+APP_SPA=http://frontend.url
 
 CACHE_VIEWS=false
 
@@ -17,3 +18,13 @@ DB_PASSWORD=
 DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
+
+BULL_CONNECTION=bull
+BULL_HOST=127.0.0.1
+BULL_PORT=22202
+BULL_PASSWORD=beforianos
+
+SMTP_PORT=
+SMTP_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
