--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.3'
-
 services:
   beforianos-postgres:
     image: postgres
@@ -10,6 +9,16 @@ services:
       - POSTGRES_DB=beforianos
     ports:
       - '22201:5432'
+    networks:
+      - beforianos-network
+
+  beforianos-redis:
+    image: bitnami/redis
+    container_name: beforianos-redis
+    environment:
+      - REDIS_PASSWORD=beforianos
+    ports:
+      - '22202:6379'
     networks:
       - beforianos-network
 
