feat(start): arquivos e comandos para inicialização

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,27 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=3333
 NODE_ENV=development
 
-APP_NAME=AdonisJs
+APP_NAME=BeGaming
 APP_URL=http://${HOST}:${PORT}
-APP_SPA=http://frontend.url
 
 CACHE_VIEWS=false
 
 APP_KEY=
 
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
+DB_CONNECTION=pg
+DB_HOST=before-postgres
+DB_PORT=5432
+DB_USER=before
+DB_PASSWORD=before
+DB_DATABASE=before
 
 HASH_DRIVER=bcrypt
 
 BULL_CONNECTION=bull
-BULL_HOST=127.0.0.1
-BULL_PORT=22202
-BULL_PASSWORD=beforianos
+BULL_HOST=before-redis
+BULL_PORT=6379
+BULL_PASSWORD=before
 
 SMTP_PORT=
 SMTP_HOST=
