--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - before-redis
     networks:
       - before-network
-    command: bash -c "./run create-key && adonis serve --dev"
+    command: bash -c "./run init-project && adonis serve --dev"
     ports:
       - 22200:3333
       - 22203:10000
